[gd_scene load_steps=30 format=3 uid="uid://bmpgm3pr1dgr5"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_g1ji6"]
[ext_resource type="Script" path="res://entities/components/hitbox_component.gd" id="2_sfuls"]
[ext_resource type="Texture2D" uid="uid://dtj0msbib567x" path="res://assets/0x72_DungeonTilesetII_v1.6.png" id="2_wnl6g"]
[ext_resource type="Script" path="res://entities/components/health_component.gd" id="3_cgakf"]
[ext_resource type="PackedScene" uid="uid://blcymssdtdd67" path="res://entities/weapons/short_sword/short_sword.tscn" id="3_tb71b"]
[ext_resource type="Script" path="res://entities/components/velocity_component.gd" id="4_f34fs"]
[ext_resource type="Script" path="res://entities/player/components/player_movement_component.gd" id="5_v50pf"]
[ext_resource type="Script" path="res://entities/player/components/resource_component.gd" id="8_ke23y"]
[ext_resource type="Script" path="res://entities/player/components/resource_collector_component.gd" id="9_6kamf"]
[ext_resource type="Script" path="res://entities/components/auto_aim_component.gd" id="10_2oulo"]
[ext_resource type="Script" path="res://entities/components/orientation_component.gd" id="11_nfanp"]
[ext_resource type="Script" path="res://entities/components/fov_component.gd" id="12_jbumv"]
[ext_resource type="Script" path="res://entities/components/effect_holder_component.gd" id="13_pcjb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jki2m"]
size = Vector2(14, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_1s7p7"]
radius = 12.0

[sub_resource type="Shader" id="Shader_r45lw"]
code = "shader_type canvas_item;

uniform float speed = 1.;

uniform vec4 tint = vec4(1., 1., 0., 1.);

uniform float span : hint_range(0.1, 1.) = .3;

uniform bool blinking = false;

float saw(float x) {
	return 2. / PI * asin(sin(x));
}

float luminance(vec4 colour) {
	return 1.0 - sqrt(0.299*colour.r*colour.r + 0.587*colour.g*colour.g + 0.114*colour.b*colour.b);
}

void fragment() {
	vec4 colour = texture(TEXTURE, UV);
	float target = abs(saw(TIME * PI * speed) * (1. + span));
	if(colour.a > 0. && blinking) {
		float lum = luminance(colour);
		float diff = abs(lum - target);
		float mx = clamp(1. - diff / span, 0., 1.);
		colour = mix(colour, tint, mx);
	}

	COLOR = colour;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pyp4m"]
shader = SubResource("Shader_r45lw")
shader_parameter/speed = 1.2
shader_parameter/tint = Vector4(0.8, 0.8, 0.8, 1)
shader_parameter/span = 1.0
shader_parameter/blinking = false

[sub_resource type="AtlasTexture" id="AtlasTexture_3ihgw"]
atlas = ExtResource("2_wnl6g")
region = Rect2(128, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6byy"]
atlas = ExtResource("2_wnl6g")
region = Rect2(144, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrwjq"]
atlas = ExtResource("2_wnl6g")
region = Rect2(160, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m87be"]
atlas = ExtResource("2_wnl6g")
region = Rect2(176, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n02su"]
atlas = ExtResource("2_wnl6g")
region = Rect2(192, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tbd8"]
atlas = ExtResource("2_wnl6g")
region = Rect2(208, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1l0v"]
atlas = ExtResource("2_wnl6g")
region = Rect2(224, 68, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdbaa"]
atlas = ExtResource("2_wnl6g")
region = Rect2(240, 68, 16, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_y40kd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ihgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6byy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrwjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m87be")
}],
"loop": true,
"name": &"idle",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n02su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tbd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1l0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdbaa")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jnry3"]
radius = 14.1421

[sub_resource type="CircleShape2D" id="CircleShape2D_c0kcl"]
radius = 24.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kua6f"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 3, 1)
direction = Vector3(-1, 0, 0)
spread = 0.0
initial_velocity_min = 128.0
initial_velocity_max = 128.0
angular_velocity_min = 48.0
angular_velocity_max = 48.0
gravity = Vector3(0, 0, 0)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("weapon")]
collision_layer = 2
collision_mask = 5
motion_mode = 1
slide_on_ceiling = false
platform_on_leave = 2
script = ExtResource("1_g1ji6")
weapon = NodePath("WeaponContainer/ShortSword")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_jki2m")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 20
monitorable = false
script = ExtResource("2_sfuls")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_1s7p7")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_cgakf")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("4_f34fs")

[node name="PlayerMovementComponent" type="Node" parent="." node_paths=PackedStringArray("velocity_component")]
script = ExtResource("5_v50pf")
velocity_component = NodePath("../VelocityComponent")
move_speed = 80

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_pyp4m")
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_y40kd")
animation = &"idle"

[node name="Camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 288
position_smoothing_enabled = true

[node name="Resources" type="Node2D" parent="."]

[node name="CoinResourceComponent" type="Node" parent="Resources"]
script = ExtResource("8_ke23y")

[node name="CoinResourceCollectorComponent" type="Area2D" parent="Resources" node_paths=PackedStringArray("resource_component")]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("9_6kamf")
resource_component = NodePath("../CoinResourceComponent")
label = "coin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resources/CoinResourceCollectorComponent"]
shape = SubResource("CircleShape2D_jnry3")

[node name="AutoAimComponent" type="Node" parent="." node_paths=PackedStringArray("orientation_component", "velocity_component", "fov_component")]
script = ExtResource("10_2oulo")
orientation_component = NodePath("../OrientationComponent")
velocity_component = NodePath("../VelocityComponent")
fov_component = NodePath("../FOVComponent")

[node name="OrientationComponent" type="Node2D" parent="."]
script = ExtResource("11_nfanp")

[node name="FOVComponent" type="RayCast2D" parent="." node_paths=PackedStringArray("orientation_component")]
collision_mask = 5
script = ExtResource("12_jbumv")
orientation_component = NodePath("../OrientationComponent")
angle = 360
angle_step = 10

[node name="BoonPickup" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoonPickup"]
shape = SubResource("CircleShape2D_c0kcl")

[node name="WeaponContainer" type="Marker2D" parent="."]
position = Vector2(0, 3)

[node name="ShortSword" parent="WeaponContainer" instance=ExtResource("3_tb71b")]

[node name="DashParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 256
process_material = SubResource("ParticleProcessMaterial_kua6f")
lifetime = 0.2
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EffectHolderComponent" type="Timer" parent="."]
autostart = true
script = ExtResource("13_pcjb6")
